src/test/deca/test_compilateur/context/invalid/created/if_while/if_float.deca
// Description :
//    test du if avec condition float 
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.29) Type de l’expression : float, attendu : ‘boolean’ pour une condition

{
float a;
if (a) {}
}
